<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="angelapps.com.tarea2coursera.MainActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/margen_horizontal"
        android:layout_marginLeft="@dimen/margen_horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TILprimerimputlayout"
            android:layout_marginTop="@dimen/margen_superior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_input"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/TIETprimero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/TILprimerimputlayout"
            android:id="@+id/TILsegundoimputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"

            >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textoFecha"
            android:hint="@string/fecha_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textAlignment="center"
            android:imeOptions="actionDone"
            />


        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="@dimen/ancho_boton"
            android:layout_height="@dimen/tamaño_boton"
            android:text="@string/boton_texto"
            android:id="@+id/botonFecha"
            android:layout_gravity="center"
            android:textSize="@dimen/letra_boton"
            android:onClick="showDatePickerDialog"
            />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/TILtercerinputlayout"
                       android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:hint="@string/telefono_input"
                android:id="@+id/TIETtelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/text_email"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TILcuartoinputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_input"
                android:singleLine="true"
                android:imeOptions="actionNext"

                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/TILquintolyout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="@string/descripcion_input"
                />





        </android.support.design.widget.TextInputLayout>



    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

    </Button>



</RelativeLayout>
